[package]
name = "assert-lux"
version = "0.0.0"
authors = ["Roy Ivy III <rivy.dev@gmail.com>"]
description = "improved assert macros"
license = "MIT OR Apache-2.0"

categories = ["testing"]
keywords = ["assert", "color", "diff", "style"]

readme = "README.mkd"
homepage = "https://github.com/rivy/rs.assert-lux"
repository = "https://github.com/rivy/rs.assert-lux"

edition = "2018"

[package.metadata]
copyright = "Copyright (C) Roy Ivy III"

[lib]
path = "src/lib/lib.rs"

# ref: <https://doc.rust-lang.org/cargo/reference/manifest.html>

[dependencies]
difference = "2.0.0"
ansi_term = "0.11.0"

[target.'cfg(windows)'.dependencies]
output_vt100 = "0.1.2"
ctor = "0.1.9"
